added filter to certificates

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
         <section id="projects">
             <h2 class='sub-title'>PROJECTS</h2>
-            <div class="project-btns">
+            <div class="project-btns btns-section">
             </div>
         </section>
         <section id='skills'>
@@ -72,143 +72,26 @@
         </section>
         <section id='certificates'>
             <h2 class='sub-title'>Certificates</h2>
-            <a class="certificate fadeIn ibm"
-                href="https://credentials.edx.org/credentials/d01d1b57330e483da5f6994e03d83b59/">
-                Professional Certificate, IBM Data Science(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://credentials.edx.org/credentials/098b574700d74432a9fb997f638bc2d2/">
-                Professional Certificate, Python Data Science(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://credentials.edx.org/credentials/250f5dafb0de40efbbf013a5b3c9f029/">
-                Professional Certificate, Data Science Foundations(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/8b5ac79a2f7f4c2aa4321aaaafd63978">
-                IBM Python Basics for Data Science(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/3532cb2223064903a9d17f8dd42689ea">
-                IBM Introduction to Data Science(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/3fe7e50b826e43819967cb9e396d1c60">
-                IBM Data Science Tools(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/1ff7eeb05c2b4a2cbd0cdd6e0a53eadd">
-                IBM SQL for Data Science(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/cb8b4838ab134544a3fbe50c1da0f51b">
-                IBM Analyzing Data with Python(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/267aa2a9f531413fab0dcbfab74bcc57">
-                IBM The Data Science Method(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/a3a26fdc1396427ba447ee7a0ccb4575">
-                IBM Visualizing Data with Python(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/954133c3694644c5ba72f8bf2a6de822">
-                IBM Machine Learning with Python(2020)
-            </a>
-            <a class="certificate fadeIn ibm"
-                href="https://courses.edx.org/certificates/2f099642be0341ee8eb6ddfc9826d8ed">
-                IBM Data Science and MachineLearning Capstone Project(2020)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/full-stack">
-                FCC Full Stack Web Developer(2019)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/responsive-web-design">
-                FCC Responsive Web Design(2019)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/javascript-algorithms-and-data-structures">
-                FCC JS Algorithms and Data Structures(2019)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/front-end-libraries">
-                FCC Front End Libraries(2019)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/data-visualization">
-                FCC Data Visualization(2019)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/apis-and-microservices">
-                FCC APIs and Microservices(2019)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/quality-assurance-v7">
-                FCC Quality Assuarance(2020)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/information-security-v7">
-                FCC Information Security(2020)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/scientific-computing-with-python-v7">
-                FCC Scientific Computing with Python(2020)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/data-analysis-with-python-v7">
-                FCC Data Analysis with Python(2020)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/machine-learning-with-python-v7">
-                FCC Machine Learning with Python(2020)
-            </a>
-            <a class="certificate fadeIn fcc"
-                href="https://www.freecodecamp.org/certification/fccc534cca9-a8ea-423c-ac32-350f031d7082/information-security-and-quality-assurance">
-                FCC Infromation Security and Quality Assurance(2019)
-            </a>
-            <a class="certificate fadeIn google"
-                href="https://www.coursera.org/account/accomplishments/specialization/certificate/F38Q8LMHV5TL">
-                Google From Data to Insights with Google Cloud Platform(2020)
-            </a>
-            <a class="certificate fadeIn google"
-                href="https://www.coursera.org/account/accomplishments/certificate/L2TV2QZNRXVA">
-                Google Exploring and Preparing your Data with BigQuery(2020)
-            </a>
-            <a class="certificate fadeIn google"
-                href="https://www.coursera.org/account/accomplishments/certificate/ZTPBMTNFLWEY">
-                Google Creating New BgiQuery Datasets and Visualizing Insights(2020)
-            </a>
-            <a class="certificate fadeIn google"
-                href="https://www.coursera.org/account/accomplishments/certificate/GJ5VKF2KYNA9">
-                Google Achieving Advanced Insights with BigQuery(2020)
-            </a>
-            <a class="certificate fadeIn google"
-                href="https://www.coursera.org/account/accomplishments/certificate/232H7CKCYK7W">
-                Google Applying Machine Learning to your Data with GCP(2020)
-            </a>
-            <a class="certificate fadeIn google"
-                href="https://www.coursera.org/account/accomplishments/certificate/RB5TLSQR7MAH">
-                Google Fundamentals for Azure Professionals: Core Infrastructure(2020)
-            </a>
+            <div class="certificate-btns btns-section">
+            </div>
+            <div class="org-btns btns-section">
+            </div>
         </section>
         <section id="contact">
             <h2 class='sub-title'>About</h2>
             <div id='profile'>
                 <div id="profile-explanation" class='fadeIn'>
-                    <p>I am a software Engineer having a customer first mind with the background
-                        of the multiple customer facing roles of Product Management, Product Marketing
+                    <p>I am a Software Engineer having a customer first mind with the background
+                        of the multiple customer facing roles of Product Management, Product Marketing,
                         New Business Development and System Engineer. </p>
-                    <p>Let's enjoying and challenging
-                        Software Development with me</p>
+                    <p>Let's enjoying and challenging Software Development with me</p>
                 </div>
                 <div id='profile-photo' class='fadeIn'>
                     <a><img src="./static/about.png" alt="about-photo"></a>
                 </div>
             </div>
             <div class="fadeIn">
-                <p>Please contact</p>
+                <h4>Please contact</h4>
                 <a href="https://github.com/gadenahi" target="_blank"><img src="./static/GitHub-Mark-64px.png"
                         alt="Github"></a>
                 <a href="https://www.linkedin.com/in/hideaki-nagaya/" target="_blank"><img src="./static/LI-In-Bug.png"
@@ -224,5 +107,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-
 </html>
